# goit-algo-hw-04

./: first_task.py  pyproject.toml  second_task.py
fourth_task/: main.py
third_task/: functionality.py  main.py
