[tool.poetry]
name = "goit-algo-hw-04"
version = "0.1.0"
description = ""
authors = ["Vitaliy-datascientist <vitaliy.dayneko2410@gmail.com>"]
packages = [{'include' = 'third_task'}]

[tool.poetry.dependencies]
python = "^3.12"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
